--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <!-- sytyle  -->
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 
@@ -111,6 +113,7 @@
     <div class="blogone" id="blogone">
         <div class="container-fluid">
             <div class="row">
+                <!-- left side blogone -->
                 <div class="col-md-2">
                     <div class="community">
                         <div class="com_blog">
@@ -155,6 +158,7 @@
                     </div>
                 </div>
 
+                <!-- middle side blogone -->
                 <div class="col-md-8">
                     <div class="category">
                         <div class="row">
@@ -240,9 +244,104 @@
                             </div>
 
                         </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="ads_slider owl-carousel c-10">
+                                    <div class="col"><img src="images/ads_slider (1).gif" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (1).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (2).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (3).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (4).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (5).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (6).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (7).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (8).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (9).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (10).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (11).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (12).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (13).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (14).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (15).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (16).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (17).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (18).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (19).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (20).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (21).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (22).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (23).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (24).jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="col"><img src="images/ads_slider (25).jpg" class="img-fluid" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="feature_ads c-10">
+                                    <h4>Featured Ads
+                                    </h4>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <div class="fads">
+                                                <img src="images/H1H1Z5WW_Beaumont-Hospital_200x34252d45.gif"
+                                                    class="img-fluid" alt="">
+                                                <p>Beaumont serves Indian community</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="fads">
+                                                <img src="images/3YOBJ4RS_visitor-insurance_200x34.webp"
+                                                    class="img-fluid" alt="">
+                                                <p>Visitor's Health Insurance. Lowest Price Guaranteed!</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="fads">
+                                                <img src="images/JAW9GVQM_Sistar-Dec2022-miindia_200x34.gif"
+                                                    class="img-fluid" alt="">
+                                                <p>Buy your dream home now. Very Low ARM Rates starting under 5.375%</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="fads">
+                                                <img src="images/A8HXEWHX_festive-essentials-home7059d1.gif"
+                                                    class="img-fluid" alt="">
+                                                <p>Bangles, Accessories & Sarees – 10,000 items</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
+                <!-- right side blogone -->
                 <div class="col-md-2">
                     <div class="blogone_ads">
                         <div class="col">
@@ -282,11 +381,40 @@
             </div>
         </div>
     </div>
+    <!-- blogsection1 ends -->
+
+    <!-- blogsection2 starts -->
+    <div class="blogtwo" id="blogtwo">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- firstpart blogtwo -->
+                <div class="col-md-2">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".owl-carousel").owlCarousel(
+                {
+                    items: 5,
+                    loop: true,
+                    autoplay: false,
+                    autoplayTimeout: 3000,
+                    smartSpeed: 500,
+                    nav: false,
+                }
+            );
+        });
+    </script>
 
 </body>
 
