--- a/index.html
+++ b/index.html
@@ -384,12 +384,147 @@
     <!-- blogsection1 ends -->
 
     <!-- blogsection2 starts -->
-    <div class="blogtwo" id="blogtwo">
+    <div class="blogtwo c-10" id="blogtwo">
         <div class="container-fluid">
             <div class="row">
                 <!-- firstpart blogtwo -->
                 <div class="col-md-2">
-                    
+                    <div class="links">
+                        <h4 class="links_title"><i class="fa-solid fa-link"></i>Quick Links</h4>
+                        <ul class="qlinks">
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Wedding Connections</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Mi Recipe</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Chicago Consulate Q&A <span>New</span> </p>
+                                </a>
+                            </li>
+                        </ul>
+
+                        <h4 class="links_title ltstyle2"><i class="fa-solid fa-briefcase"></i>Professional Service</h4>
+                        <ul class="qlinks">
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Award winning auto accident injury and business litigation services – Call
+                                        1-844-M-CHAHAL</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Injured in a car accident? Call Khurana Law Firm, PC for professional
+                                        representation</p>
+                                </a>
+                            </li>
+                        </ul>
+
+                        <h4 class="links_title ltstyle2"><i class="fa-solid fa-graduation-cap"></i>Education</h4>
+                        <ul class="qlinks">
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Brookfield Academy – Open for Enrollment <span>4 locations</span> </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Macomb Children's Academy - Open House <span>Mar 19</span> </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>SAT, ACT, PSAT Online & In-person classes @ Enrich Grades <span>Register
+                                            Now</span> </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Aloha – Mind Math, Reading, Writing – Register now <span>New</span> </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Bansal Math – Problem Solving Math Classes – 1st to 8th Grade <span>Register now
+                                        </span> </p>
+                                </a>
+                            </li>
+                        </ul>
+
+                        <h4 class="links_title"><i class="fa-solid fa-graduation-cap"></i>Medical / Dental / Eye Care</h4>
+                        <ul class="qlinks">
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Immigration Physicals by USCIS designated Civil Surgeon</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Dr Reshma Gowda - Family Dental service - Advanced technology in cosmetic
+                                        dentistry</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>IVF Michigan Fertility Center - 6 locations</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Dr. Sheela Neral,DDS. Pure Dental. Two convenient locations</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Glowing Smiles Dental – Dr. Nikki Jassal – New patient specials</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Conceive a BOY or GIRL as you wish - Urobiologics</p>
+                                </a>
+                            </li>
+                        </ul>
+
+                        <h4 class="links_title"><i class="fa-solid fa-car-side"></i>Automotive</h4>
+                        <ul class="qlinks">
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Tamaroff Honda - New Inventory Arriving Daily! <span>Call Shameem Rahman</span></p>
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+
+                <!-- secondpart blogtwo -->
+                <div class="col-md-6">
+                    <div class="links">
+                        <h4 class="links_title">Market Place</h4>
+                        <ul class="qlinks">
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Wedding Connections</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Mi Recipe</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa-solid fa-chevron-right"></i>
+                                    <p>Chicago Consulate Q&A <span>New</span> </p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
